--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -669,7 +669,7 @@ button {
 .keyboard {
   position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: -200%;
   width: 100%;
   z-index: 110;
 }
@@ -783,7 +783,22 @@ button {
   font-size: 0;
   display: flex;
   align-items: center;
+  position: relative;
   justify-content: center;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.keyboard .top .zzhk_yzm input {
+  border: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #ccc;
+  opacity: 0;
 }
 .keyboard .top .zzhk_yzm li {
   display: inline-block;
@@ -794,13 +809,10 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
 }
 .keyboard .top .zzhk_yzm li + li {
   border-left: 0 none;
-}
-.keyboard .top .zzhk_yzm li input {
-  border: 0;
-  margin: 0;
 }
 .keyboard .top .zzhk_yzm li span {
   font-size: 20px;
@@ -885,6 +897,19 @@ button {
   }
   to {
     bottom: 20%;
+    display: block;
+  }
+}
+.animate_keyboard {
+  animation: myKey 1s forwards;
+}
+@keyframes myKey {
+  from {
+    bottom: -200%;
+    display: none;
+  }
+  to {
+    bottom: 0;
     display: block;
   }
 }
