--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -760,7 +760,7 @@ button {
 .keyboard {
     position: fixed;
     left: 0;
-    bottom: 0;
+    bottom: -200%;
     width: 100%;
     z-index: 110;
     >li {
@@ -876,7 +876,22 @@ button {
             font-size: 0;
             display: flex;
             align-items: center;
+            position: relative;
             justify-content: center;
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+            input {
+                border: 0;
+                margin: 0;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                left: 0;
+                top: 0;
+                background-color: #ccc;
+                opacity: 0;
+            }
             li {
                 display: inline-block;
                 width: 50px;
@@ -886,12 +901,9 @@ button {
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                font-size: 20px;
                 &+li {
                     border-left: 0 none;
-                }
-                input {
-                    border: 0;
-                    margin: 0;
                 }
                 span {
                     font-size: 20px;
@@ -991,6 +1003,22 @@ button {
     }
     to {
         bottom: 20%;
+        display: block;
+    }
+}
+
+// 键盘动画
+.animate_keyboard {
+    animation: myKey 1s forwards;
+}
+
+@keyframes myKey {
+    from {
+        bottom: -200%;
+        display: none;
+    }
+    to {
+        bottom: 0;
         display: block;
     }
 }
