--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -163,6 +163,9 @@ img {
 .fill-70 {
   height: 70px;
 }
+.fill-100 {
+  height: 150px;
+}
 .ml_8 {
   margin-left: 8px;
 }
@@ -210,6 +213,12 @@ img {
 }
 .bg_body_gray {
   background-color: #efeff4;
+}
+.color_555 {
+  color: #555555;
+}
+.color_666 {
+  color: #666;
 }
 html,
 body {
@@ -832,6 +841,69 @@ button {
 }
 .keyboard .top .sendAgain span:nth-of-type(1) {
   color: #F24F3E;
+}
+.confirm {
+  background-color: #fff;
+  position: fixed;
+  left: 0;
+  bottom: -200%;
+  width: 100%;
+  z-index: 110;
+}
+.confirm .top_close {
+  width: 100%;
+  border-bottom: 1px solid #E2E4E9;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+}
+.confirm .top_close span {
+  font-family: PingFangSC-Regular;
+  font-size: 15px;
+  color: #222222;
+  letter-spacing: 0.05px;
+  margin-left: 30px;
+}
+.confirm .top_close i {
+  margin-top: 17px;
+  font-size: 26px;
+  font-weight: 600;
+  margin-right: 10px;
+  color: #D8D8D8;
+}
+.confirm ul {
+  width: 92%;
+  margin: 0 4%;
+}
+.confirm ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px;
+}
+.confirm ul li span:nth-child(1) {
+  font-family: 'PingFangSC-Regular';
+  font-size: 14px;
+  color: #555555;
+  letter-spacing: 0.05px;
+}
+.confirm ul li span:nth-child(2) {
+  font-family: 'PingFangSC-Semibold';
+  font-size: 16px;
+  color: #666666;
+  letter-spacing: 0.05px;
+}
+.confirm ul li:last-child span:nth-child(1) {
+  font-family: 'PingFangSC-Regular';
+  font-size: 15px;
+  color: #222222;
+  letter-spacing: 0.05px;
+}
+.confirm ul li:last-child span:nth-child(2) {
+  font-family: PingFangSC-Semibold;
+  font-size: 18px;
+  color: #232323;
+  letter-spacing: 0.06px;
 }
 .send_yzm {
   margin-top: 15px;
