--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -149,6 +149,10 @@
     height: 70px;
 }
 
+.fill-100 {
+    height: 150px;
+}
+
 .ml_8 {
     margin-left: 8px;
 }
@@ -211,6 +215,14 @@
 
 .bg_body_gray {
     background-color: @bg_gray_efeff4;
+}
+
+.color_555 {
+    color: @black_555;
+}
+
+.color_666 {
+    color: #666;
 }
 
 html,
@@ -923,6 +935,76 @@ button {
                 color: @black_555;
                 &:nth-of-type(1) {
                     color: #F24F3E;
+                }
+            }
+        }
+    }
+}
+
+.confirm {
+    background-color: #fff;
+    position: fixed;
+    left: 0;
+    bottom: -200%;
+    width: 100%;
+    z-index: 110;
+    .top_close {
+        width: 100%;
+        border-bottom: 1px solid #E2E4E9;
+        height: 60px;
+        line-height: 60px;
+        text-align: center;
+        span {
+            font-family: PingFangSC-Regular;
+            font-size: @font-15;
+            color: @black_222;
+            letter-spacing: 0.05px;
+            margin-left: 30px;
+        }
+        i {
+            margin-top: 17px;
+            font-size: 26px;
+            font-weight: 600;
+            margin-right: 10px;
+            color: #D8D8D8;
+        }
+    }
+    ul {
+        width: 92%;
+        margin: 0 4%;
+        li {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            height: 40px;
+            span {
+                &:nth-child(1) {
+                    font-family: 'PingFangSC-Regular';
+                    font-size: @font-14;
+                    color: @black_555;
+                    letter-spacing: 0.05px;
+                }
+                &:nth-child(2) {
+                    font-family: 'PingFangSC-Semibold';
+                    font-size: @font-16;
+                    color: #666666;
+                    letter-spacing: 0.05px;
+                }
+            }
+            &:last-child {
+                span {
+                    &:nth-child(1) {
+                        font-family: 'PingFangSC-Regular';
+                        font-size: @font-15;
+                        color: @black_222;
+                        letter-spacing: 0.05px;
+                    }
+                    &:nth-child(2) {
+                        font-family: PingFangSC-Semibold;
+                        font-size: @font-18;
+                        color: #232323;
+                        letter-spacing: 0.06px;
+                    }
                 }
             }
         }
