--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -2225,6 +2225,29 @@ button {
             border: 0;
         }
     }
+    .li_img {
+        img {
+            width: 21px;
+            height: 21px;
+            margin-right: 24px;
+            vertical-align: -5px;
+        }
+        span {
+            margin-right: 0;
+        }
+        i {
+            float: right;
+            margin-right: 3%;
+            float: right;
+            margin-right: 3%;
+            color: #575757;
+            font-size: 26px;
+        }
+        &:after {
+            right: 0 !important;
+            left: 0 !important;
+        }
+    }
 }
 
 .bd_b_0::after {
