--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -243,8 +243,8 @@ body {
 btn:enabled:active,
 button.mui-active:enabled,
 button:enabled:active {
-    color: #fff;
-    background-color: #E69898 !important;
+    color: #fff; // background-color: #E69898 !important;
+    opacity: 0.8;
 }
 
 .btn_red {
@@ -1169,6 +1169,9 @@ button {
             display: block;
         }
     }
+    .keyboard {
+        padding-bottom: 17px;
+    }
 }
 
 // xr xsMax
@@ -1230,6 +1233,9 @@ button {
             bottom: 44px;
             display: block;
         }
+    }
+    .keyboard {
+        padding-bottom: 17px;
     }
 }
 
